feat(be): implement endopint me for validation token
